# babeltrace

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitreview  CONTRIBUTING.adoc  ChangeLog  CodingStyle  LICENSE  Makefile.am  README  README.adoc  babeltrace-ctf.pc.in  babeltrace.pc.in  babeltrace2-ctf.pc.in  babeltrace2.pc.in  bootstrap  configure.ac  dev-requirements.txt  mit-license.txt  pyproject.toml  rc3.adoc  setup.cfg  std-ext-lib.txt
bindings/python/: Makefile.am  __init__.py.in  babeltrace.i.in  bt.py  common.py  nativebt.i  python-complements.c  python-complements.h  reader.py  setup.py.in  writer.py
cli/: Makefile.am  babeltrace-cfg-cli-args-connect.c  babeltrace-cfg-cli-args-connect.h  babeltrace-cfg-cli-args-default.c  babeltrace-cfg-cli-args-default.h  babeltrace-cfg-cli-args.c  babeltrace-cfg-cli-args.h  babeltrace-cfg-connect.c  babeltrace-cfg.c  babeltrace-cfg.h  babeltrace-log.c  babeltrace.c  babeltrace2-cfg-cli-args-connect.c  babeltrace2-cfg-cli-args-connect.h  babeltrace2-cfg-cli-args-default.c  babeltrace2-cfg-cli-args-default.h  babeltrace2-cfg-cli-args.c  babeltrace2-cfg-cli-args.h  babeltrace2-cfg.c  babeltrace2-cfg.h  babeltrace2-log.c  babeltrace2.c  default-cfg.h  logging.c  logging.h
converter/: Makefile.am  babeltrace-api.h  babeltrace-cfg-connect.c  babeltrace-cfg-connect.h  babeltrace-cfg.c  babeltrace-cfg.h  babeltrace-lib.c  babeltrace-log.c  babeltrace.c  babeltrace.in  babeltrace.wrapper.in  default-cfg.c  default-cfg.h  types.c
ctf-reader-proto/: Makefile.am  ctf-btr.gdb  ctf-fs-data-stream.c  ctf-fs-data-stream.h  ctf-fs-file.c  ctf-fs-file.h  ctf-fs-metadata.c  ctf-fs-metadata.h  ctf-fs.c  ctf-fs.h  ctf-notif-iter.gdb  print.h  protorectoral.c
ctf-reader-proto/ctf-btr/: Makefile.am  ctf-btr.c  ctf-btr.h
ctf-reader-proto/ctf-notif-iter/: Makefile.am  ctf-notif-iter.c  print.h
ctf-reader-proto/metadata-parsing/: Makefile.am  ctf-ast.h  ctf-lexer.l  ctf-parser.y  ctf-scanner.h  ctf-visitor-generate-ir.c  ctf-visitor-parent-links.c
ctf-writer/: Makefile.am  attributes.c  clock-class.c  clock.c  event-class.c  event.c  field-path.c  field-types.c  field-wrapper.c  fields.c  functor.c  logging.c  logging.h  object-pool.c  resolve.c  stream-class.c  stream.c  trace.c  utils.c  validation.c  values.c  writer.c
doc/: API.txt  Makefile.am  babeltrace-log.1  babeltrace.1  debuginfo.txt  development.txt  logging-guide.adoc  lttng-live.txt  python-howto.txt  ref-counting.md
doc/api/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  README.adoc
doc/bindings/: Makefile.am
doc/contributing-images/: Makefile.am
doc/images/: Makefile.am
doc/man/: .gitignore  Makefile.am  README.adoc  asciidoc-attrs.conf.in  babeltrace-convert.1.txt  babeltrace-filter.lttng-utils.debug-info.7.txt  babeltrace-filter.utils.muxer.7.txt  babeltrace-filter.utils.trimmer.7.txt  babeltrace-help.1.txt  babeltrace-intro.7.txt  babeltrace-list-plugins.1.txt  babeltrace-log.1.txt  babeltrace-plugin-ctf.7.txt  babeltrace-plugin-lttng-utils.7.txt  babeltrace-plugin-text.7.txt  babeltrace-plugin-utils.7.txt  babeltrace-query.1.txt  babeltrace-run.1.txt  babeltrace-sink.ctf.fs.7.txt  babeltrace-sink.text.pretty.7.txt  babeltrace-sink.utils.counter.7.txt  babeltrace-sink.utils.dummy.7.txt  babeltrace-source.ctf.fs.7.txt  babeltrace-source.ctf.lttng-live.7.txt  babeltrace-source.text.dmesg.7.txt  babeltrace.1.txt  babeltrace2-convert.1.txt  babeltrace2-filter.lttng-utils.debug-info.7.txt  babeltrace2-filter.utils.muxer.7.txt  babeltrace2-filter.utils.trimmer.7.txt  babeltrace2-help.1.txt  babeltrace2-intro.7.txt  babeltrace2-list-plugins.1.txt  babeltrace2-log.1.txt  babeltrace2-plugin-ctf.7.txt  babeltrace2-plugin-lttng-utils.7.txt  babeltrace2-plugin-text.7.txt  babeltrace2-plugin-utils.7.txt  babeltrace2-query-babeltrace.support-info.7.txt  babeltrace2-query-babeltrace.trace-infos.7.txt  (+31 more)
formats/bt-dummy/: Makefile.am  bt-dummy.c
formats/ctf/: Makefile.am  callbacks.c  ctf.c  events-private.h  events.c  iterator.c  memstream.h
formats/ctf-metadata/: Makefile.am  ctf-metadata.c
formats/ctf-text/: Makefile.am  ctf-text.c
formats/lttng-live/: Makefile.am  lttng-live-comm.c  lttng-live-functions.c  lttng-live-functions.h  lttng-live-plugin.c  lttng-live.c  lttng-live.h  lttng-viewer-abi.h  lttng-viewer.h
include/: Makefile.am  version.h
include/babeltrace/: align-internal.h  align.h  assert-internal.h  assert-pre-internal.h  babeltrace-internal.h  babeltrace.h  bin-info.h  bitfield-internal.h  bitfield.h  callbacks-internal.h  clock-internal.h  clock-types.h  common-internal.h  compiler.h  context-internal.h  context.h  crc32.h  ctfser-internal.h  debug-info.h  debuginfo.h  dwarf.h  endian-internal.h  endian.h  error.h  fd-cache-internal.h  format-internal.h  format.h  iterator-internal.h  iterator.h  lib-logging-internal.h  list-internal.h  list.h  logging-internal.h  logging.h  mmap-align-internal.h  mmap-align.h  object-internal.h  object-pool-internal.h  object.h  objects.h  (+24 more)
include/babeltrace2/: align-internal.h  assert-internal.h  assert-pre-internal.h  babeltrace-internal.h  babeltrace.h  (+29 more)
include/babeltrace2-ctf-writer/: clock-class.h  clock.h  event-fields.h  event-types.h  event.h  field-types.h  fields.h  object.h  stream-class.h  stream.h  trace.h  types.h  utils.h  visitor.h  writer.h
lib/: Makefile.am  babeltrace.c  babeltrace2.c  bin-info.c  callbacks.c  context.c  crc32.c  ctf-events.c  debug-info.c  debuginfo.c  dwarf.c  error.c  iterator.c  lib-logging.c  logging.c  object-pool.c  object.c  objects.c  prio_heap.c  ref.c  registry.c  so-info.c  trace-collection.c  trace-handle.c  util.c  utils.c  value.c  values.c
plugins/: Makefile.am  component-class.c  component-factory.c  component.c  iterator.c  plugin.c  sink.c  source.c
python-plugin-provider/: Makefile.am  logging.c  logging.h  python-plugin-provider.c
src/: Makefile.am  Makefile.common.inc  babeltrace2-ctf-writer.pc.in  babeltrace2.pc.in  gen-version-i.sh
tests/: Makefile.am  runall.sh  test-bitfield.c  test-dummytrace.c  tests  tests-python.py  tests_debuginfo
(+2596 files in other folders)
