# SPDX-License-Identifier: MIT

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	include \
	src \
	doc \
	tests

dist_doc_DATA = \
	ChangeLog \
	CONTRIBUTING.adoc \
	LICENSE \
	README.adoc

dist_noinst_DATA = CodingStyle

EXTRA_DIST = \
	LICENSES/BSD-2-Clause \
	LICENSES/BSD-4-Clause \
	LICENSES/BSL-1.0 \
	LICENSES/CC-BY-SA-4.0 \
	LICENSES/GPL-2.0 \
	LICENSES/GPL-3.0 \
	LICENSES/LGPL-2.1 \
	LICENSES/MIT \
	std-ext-lib.txt \
	tools/format-cpp \
	version
