# SPDX-License-Identifier: MIT

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	include \
	src \
	doc \
	tests

dist_doc_DATA = \
	ChangeLog \
	CONTRIBUTING.adoc \
	LICENSE \
	README.adoc

dist_noinst_DATA = CodingStyle

EXTRA_DIST = \
	LICENSES/BSD-2-Clause.txt \
	LICENSES/BSD-4-Clause.txt \
	LICENSES/BSL-1.0.txt \
	LICENSES/CC-BY-SA-4.0.txt \
	LICENSES/GPL-2.0-only.txt \
	LICENSES/GPL-3.0-or-later.txt \
	LICENSES/LGPL-2.1-only.txt \
	LICENSES/MIT.txt \
	std-ext-lib.txt \
	tools/format-cpp.sh \
	tools/lint-py.sh \
	version
